# uibar

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
apartments/: admin.py  gemini_utils.py  models.py  permissions.py  serializers.py  urls.py  views.py
apartments/migrations/: 0001_initial.py  0002_amenity_alter_apartment_options_and_more.py  0003_review.py  0004_booking.py  0005_apartmentphoto.py
auth_app/: models.py  serializers.py  urls.py  views.py
auth_app/migrations/: 0001_initial.py  0002_remove_user_city_alter_user_email_alter_user_phone.py  0003_user_city_alter_user_phone.py
media/apartments/2025/04/: pexels-fotoaibe-1643383.jpg:Zone.Identifier  pexels-jvdm-1457842.jpg:Zone.Identifier
media/apartments/2025/04/05/: pexels-pixabay-271624.jpg:Zone.Identifier
uibar_project_new/: asgi.py  settings.py  urls.py  wsgi.py
