[tool.poetry]
name = "uibar-project-new"
version = "0.1.0"
description = "A Django project for accommodation booking."
authors = ["Gulnara <gulnarkaz@gmail.com>"]
readme = "README.md"
packages = [{include = "uibar_project_new"}]

[tool.poetry.dependencies]
python = ">=3.10"
django = ">=5.2,<6.0"
djangorestframework = ">=3.16.0,<4.0.0"
djangorestframework-simplejwt = {version = ">=5.5.0,<6.0.0", extras = ["blacklist"]}
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.0,<2.0.0"
django-filter = ">=25.1,<26.0"
pillow = ">=11.1.0,<12.0.0"
google-generativeai = ">=0.8.4,<0.9.0"
gunicorn = ">=23.0.0,<24.0.0"
whitenoise = ">=6.9.0,<7.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"